--- a/frontend/src/pages/auth/login/LoginPage.css
+++ b/frontend/src/pages/auth/login/LoginPage.css
@@ -109,3 +109,17 @@ body {
     background: linear-gradient(90deg, #1e40af 0%, #4299e1 100%);
     transform: translateY(-2px) scale(1.02);
   }
+
+  .error-message{
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 10px;
+    text-align: center;
+    width: 100%;
+    padding: 8px;
+    background-color: #ffe5e5;
+    border-radius: 8px;
+    border: 1px solid #ff0000;
+    box-shadow: 0 2px 4px rgba(255, 0, 0, 0.1);
+    transition: all 0.3s ease;
+  }
